Updated UI components and JS

--- a/footer.html
+++ b/footer.html
@@ -170,7 +170,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="transactions.html" data-page="transactions">
+                        <a href="transactions-NEW.html" data-page="transactions">
                             <i class="bi bi-receipt"></i> Transactions
                         </a>
                     </li>
