--- a/transactions-NEW.html
+++ b/transactions-NEW.html
@@ -234,7 +234,7 @@
     </div>
   </div>
 
-  <!-- VASOOLI MODAL - ENHANCED with Month Tracking -->
+  <!-- VASOOLI MODAL - ENHANCED with Month, Fuel Category & Date -->
   <div class="modal fade" id="vasooliModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -247,13 +247,24 @@
             
             <div class="mb-3">
               <label class="form-label">Customer *</label>
-              <select id="vasooli-customer" class="form-select" required onchange="window.loadVasooliCustomerBalance(this.value)"></select>
+              <select id="vasooli-customer" class="form-select" required></select>
             </div>
 
-            <div class="mb-3" id="vasooli-balance-info" style="display:none">
-              <div class="alert alert-info mb-0">
-                <strong>Current Balance:</strong> <span id="vasooli-current-balance">Rs. 0</span>
-              </div>
+            <div class="mb-3">
+              <label class="form-label">Fuel Category (Optional)</label>
+              <select id="vasooli-fuel-category" class="form-select">
+                <option value="">Select Category</option>
+                <option value="Petrol">Petrol</option>
+                <option value="Diesel">Diesel</option>
+                <option value="Mixed">Mixed (Both)</option>
+              </select>
+              <small class="text-muted">Kis fuel ki vasooli hai</small>
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label">Payment Date *</label>
+              <input id="vasooli-date" class="form-control" type="date" required>
+              <small class="text-muted">Kab payment mili (purani date bhi select kar sakte hain)</small>
             </div>
 
             <div class="mb-3">
@@ -273,6 +284,7 @@
                 <option value="2026-11">November 2026</option>
                 <option value="2026-12">December 2026</option>
               </select>
+              <small class="text-muted">Kis mahine ka payment hai</small>
             </div>
 
             <div class="mb-3">
@@ -281,15 +293,6 @@
                 <span class="input-group-text">Rs.</span>
                 <input id="vasooli-amount" class="form-control" type="number" step="0.01" required>
               </div>
-            </div>
-
-            <div class="mb-3">
-              <label class="form-label">Payment Method</label>
-              <select id="vasooli-method" class="form-select">
-                <option value="Cash">Cash</option>
-                <option value="Bank">Bank Transfer</option>
-                <option value="Cheque">Cheque</option>
-              </select>
             </div>
 
             <div class="mb-3">
