--- a/transactions-NEW.html
+++ b/transactions-NEW.html
@@ -234,11 +234,11 @@
     </div>
   </div>
 
-  <!-- VASOOLI MODAL - ENHANCED with Month, Fuel Category & Date -->
+  <!-- VASOOLI MODAL - ENHANCED with Fuel Category, Liters & Auto-Calculate -->
   <div class="modal fade" id="vasooliModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <form id="vasooliForm" onsubmit="event.preventDefault(); window.addVasooli();">
+        <form id="vasooliForm" onsubmit="event.preventDefault();">
           <div class="modal-header bg-primary text-white">
             <h5 class="modal-title"><i class="bi bi-cash me-2"></i>Vasooli (Payment Collection)</h5>
             <button class="btn-close btn-close-white" type="button" data-bs-dismiss="modal"></button>
@@ -262,9 +262,15 @@
             </div>
 
             <div class="mb-3">
+              <label class="form-label">Liters (Optional - for calculation)</label>
+              <input id="vasooli-liters" class="form-control" type="number" step="0.01" placeholder="Enter liters">
+              <small class="text-muted">Agar liters enter karenge to amount auto-calculate hoga</small>
+            </div>
+
+            <div class="mb-3">
               <label class="form-label">Payment Date *</label>
               <input id="vasooli-date" class="form-control" type="date" required>
-              <small class="text-muted">Kab payment mili (purani date bhi select kar sakte hain)</small>
+              <small class="text-muted">Kab payment mili</small>
             </div>
 
             <div class="mb-3">
@@ -284,7 +290,6 @@
                 <option value="2026-11">November 2026</option>
                 <option value="2026-12">December 2026</option>
               </select>
-              <small class="text-muted">Kis mahine ka payment hai</small>
             </div>
 
             <div class="mb-3">
@@ -293,6 +298,7 @@
                 <span class="input-group-text">Rs.</span>
                 <input id="vasooli-amount" class="form-control" type="number" step="0.01" required>
               </div>
+              <small class="text-muted">Auto-calculated agar liters enter kiye</small>
             </div>
 
             <div class="mb-3">
