--- a/transactions-NEW.html
+++ b/transactions-NEW.html
@@ -396,5 +396,8 @@
   <script src="js/app.js"></script>
   <script src="js/transactions-page.js"></script>
   <script src="js/transactions-enhancements.js"></script>
+  <script src="assets/js/transactions-page-FINAL.js"></script>
+<script src="assets/js/transactions-enhancements-WORKING.js"></script>
+
 </body>
 </html>
