--- a/transactions-NEW.html
+++ b/transactions-NEW.html
@@ -396,8 +396,11 @@
   <script src="js/app.js"></script>
   <script src="js/transactions-page.js"></script>
   <script src="js/transactions-enhancements.js"></script>
-  <script src="assets/js/transactions-page-FINAL.js"></script>
-<script src="assets/js/transactions-enhancements-WORKING.js"></script>
+  <script src="js/transactions-page-FINAL.js?v=3"></script>
+<script src="js/transactions-enhancements-WORKING.js?v=3"></script>
+
+  <!-- <script src="assets/js/transactions-page-FINAL.js"></script>
+<script src="assets/js/transactions-enhancements-WORKING.js"></script> -->
 
 </body>
 </html>
