--- a/customers.html
+++ b/customers.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Customers | Khalid & Sons Petroleum</title>
   <link rel="icon" type="image/png" href="assets/logo.jfif">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="assets/styles.css">
@@ -16,9 +15,9 @@
 
   <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h3 class="mb-0"><i class="bi bi-people me-2"></i>Customers Management</h3>
+      <h3 class="mb-0"><i class="bi bi-people-fill me-2"></i>Customers Management</h3>
       <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCustomerModal">
-        <i class="bi bi-person-plus me-2"></i>Add New Customer
+        <i class="bi bi-person-plus-fill me-2"></i>Add New Customer
       </button>
     </div>
 
@@ -27,60 +26,58 @@
       <div class="col-md-3">
         <div class="card shadow-sm border-primary">
           <div class="card-body text-center">
-            <i class="bi bi-people-fill text-primary" style="font-size: 2rem;"></i>
-            <h6 class="mt-2 text-muted">Total Customers</h6>
-            <h3 id="total-customers">0</h3>
+            <i class="bi bi-people fs-1 text-primary"></i>
+            <h6 class="text-muted mt-2">Total Customers</h6>
+            <h3 class="text-primary" id="total-customers">0</h3>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card shadow-sm border-danger">
           <div class="card-body text-center">
-            <i class="bi bi-cash-stack text-danger" style="font-size: 2rem;"></i>
-            <h6 class="mt-2 text-muted">Total Udhaar</h6>
-            <h3 id="total-udhaar">Rs. 0</h3>
+            <i class="bi bi-cash-stack fs-1 text-danger"></i>
+            <h6 class="text-muted mt-2">Total Udhaar</h6>
+            <h4 class="text-danger" id="total-udhaar">Rs. 0.00</h4>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card shadow-sm border-success">
           <div class="card-body text-center">
-            <i class="bi bi-wallet2 text-success" style="font-size: 2rem;"></i>
-            <h6 class="mt-2 text-muted">Total Advance</h6>
-            <h3 id="total-advance">Rs. 0</h3>
+            <i class="bi bi-wallet2 fs-1 text-success"></i>
+            <h6 class="text-muted mt-2">Total Advance</h6>
+            <h4 class="text-success" id="total-advance">Rs. 0.00</h4>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card shadow-sm border-info">
           <div class="card-body text-center">
-            <i class="bi bi-building text-info" style="font-size: 2rem;"></i>
-            <h6 class="mt-2 text-muted">Companies</h6>
-            <h3 id="total-companies">0</h3>
+            <i class="bi bi-building fs-1 text-info"></i>
+            <h6 class="text-muted mt-2">Companies</h6>
+            <h3 class="text-info" id="total-companies">0</h3>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Search and Filter -->
+    <!-- Search & Filter -->
     <div class="card shadow-sm mb-3">
       <div class="card-body">
         <div class="row g-3">
           <div class="col-md-6">
-            <input type="text" id="search-customer" class="form-control" placeholder="Search by name or SR No...">
+            <input type="text" id="search-input" class="form-control" placeholder="Search by name or SR No...">
           </div>
           <div class="col-md-4">
             <select id="filter-category" class="form-select">
               <option value="">All Categories</option>
               <option value="Member">Member</option>
               <option value="Company">Company</option>
-              <option value="Government">Government</option>
-              <option value="VIP">VIP</option>
               <option value="Owner">Owner</option>
             </select>
           </div>
           <div class="col-md-2">
-            <button class="btn btn-secondary w-100" onclick="clearFilters()">
+            <button id="clear-filters" class="btn btn-secondary w-100">
               <i class="bi bi-x-circle me-1"></i>Clear
             </button>
           </div>
@@ -88,7 +85,7 @@
       </div>
     </div>
 
-    <!-- Customers Table -->
+    <!-- Table -->
     <div class="card shadow-sm">
       <div class="card-body p-0">
         <div class="table-responsive">
@@ -104,7 +101,7 @@
               </tr>
             </thead>
             <tbody id="customers-table">
-              <tr><td colspan="6" class="text-center text-muted py-4">Loading customers...</td></tr>
+              <tr><td colspan="6" class="text-center py-4 text-muted">Loading...</td></tr>
             </tbody>
           </table>
         </div>
@@ -112,49 +109,94 @@
     </div>
   </div>
 
-  <!-- Add Customer Modal -->
+  <!-- ADD MODAL -->
   <div class="modal fade" id="addCustomerModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
-        <form id="addCustomerForm" onsubmit="event.preventDefault(); addCustomer();">
+        <form id="addCustomerForm">
           <div class="modal-header bg-primary text-white">
-            <h5 class="modal-title"><i class="bi bi-person-plus me-2"></i>Add New Customer</h5>
-            <button class="btn-close btn-close-white" type="button" data-bs-dismiss="modal"></button>
+            <h5 class="modal-title"><i class="bi bi-person-plus-fill me-2"></i>Add New Customer</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
           </div>
           <div class="modal-body">
             <div class="mb-3">
               <label class="form-label">SR No *</label>
-              <input id="new-sr-no" class="form-control" type="number" required>
+              <input type="number" id="customer-sr-no" class="form-control" required>
               <small class="text-muted">Unique serial number for customer</small>
             </div>
             <div class="mb-3">
               <label class="form-label">Name *</label>
-              <input id="new-name" class="form-control" type="text" required>
+              <input type="text" id="customer-name" class="form-control" required>
             </div>
             <div class="mb-3">
               <label class="form-label">Phone</label>
-              <input id="new-phone" class="form-control" type="tel" placeholder="03XX-XXXXXXX">
+              <input type="tel" id="customer-phone" class="form-control" placeholder="03001234567">
             </div>
             <div class="mb-3">
-              <label class="form-label">Category</label>
-              <select id="new-category" class="form-select">
+              <label class="form-label">Category *</label>
+              <select id="customer-category" class="form-select" required>
+                <option value="">Select Category</option>
                 <option value="Member">Member</option>
                 <option value="Company">Company</option>
-                <option value="Government">Government</option>
-                <option value="VIP">VIP</option>
-                <option value="Owner">Owner</option>
               </select>
             </div>
             <div class="mb-3">
               <label class="form-label">Opening Balance</label>
-              <input id="new-balance" class="form-control" type="number" step="0.01" value="0">
+              <input type="number" id="customer-balance" class="form-control" value="0" step="0.01">
               <small class="text-muted">Positive = Udhaar (Customer owes), Negative = Advance (We owe)</small>
             </div>
           </div>
           <div class="modal-footer">
-            <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Close</button>
-            <button class="btn btn-primary" type="submit">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">
               <i class="bi bi-check-circle me-1"></i>Add Customer
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- EDIT MODAL -->
+  <div class="modal fade" id="editCustomerModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form id="editCustomerForm">
+          <div class="modal-header bg-warning">
+            <h5 class="modal-title"><i class="bi bi-pencil me-2"></i>Edit Customer</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <input type="hidden" id="edit-customer-id">
+            <div class="mb-3">
+              <label class="form-label">SR No *</label>
+              <input type="number" id="edit-sr-no" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Name *</label>
+              <input type="text" id="edit-name" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Phone</label>
+              <input type="tel" id="edit-phone" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Category *</label>
+              <select id="edit-category" class="form-select" required>
+                <option value="Member">Member</option>
+                <option value="Company">Company</option>
+                <option value="Owner">Owner</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Balance</label>
+              <input type="number" id="edit-balance" class="form-control" step="0.01">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-warning">
+              <i class="bi bi-check-circle me-1"></i>Update
             </button>
           </div>
         </form>
@@ -178,9 +220,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="js/config.js"></script>
-  <script src="js/auth.js"></script>  
+  <script src="js/auth.js"></script>
   <script src="js/app.js"></script>
   <script src="js/customers-page.js"></script>
 </body>
 </html>
-
