--- a/transactions-NEW-FIXED.html
+++ b/transactions-NEW-FIXED.html
@@ -360,7 +360,7 @@
 <script src="js/config.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/app.js"></script>
-<script src="js/transactions-page-FINAL.js"></script>
+<script src="js/transactions-page.js"></script>
 
 
 
