--- a/customers.html
+++ b/customers.html
@@ -222,6 +222,6 @@
   <script src="js/config.js"></script>
   <script src="js/auth.js"></script>
   <script src="js/app.js"></script>
-  <!-- <script src="js/customers-page.js"></script> -->
+  <script src="js/customers-page.js"></script>
 </body>
 </html>
