--- a/customers.html
+++ b/customers.html
@@ -8,6 +8,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="assets/styles.css">
+  <style>
+  .badge-info { background-color: #0dcaf0 !important; color: #000 !important; }
+  .badge-primary { background-color: #0d6efd !important; color: #fff !important; }
+  .badge-success { background-color: #198754 !important; color: #fff !important; }
+  .badge-warning { background-color: #ffc107 !important; color: #000 !important; }
+  .badge-secondary { background-color: #6c757d !important; color: #fff !important; }
+  .badge-danger { background-color: #dc3545 !important; color: #fff !important; }
+</style>
 </head>
 
 <body data-page="customers">
