Fix: move files to root

--- a/transactions.html
+++ b/transactions.html
@@ -360,8 +360,9 @@
 <script src="js/config.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/app.js"></script>
-<script src="js/transactions-page.js"></script>
-
+<!-- <script src="js/transactions-page.js"></script> -->
+<script src="js/transactions-COMPLETE.js"></script>
+<script src="js/transactions-enhancements-WORKING.js"></script>
 
 
 <!-- <script src="assets/js/transactions-page-FINAL.js"></script>
