--- a/navbar.html
+++ b/navbar.html
@@ -111,7 +111,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="transactions-NEW.html" data-page="transactions">
+                    <a class="nav-link" href="transactions.html" data-page="transactions">
                         <i class="bi bi-receipt"></i>
                         Transactions
                     </a>
