--- a/transactions1.html
+++ b/transactions1.html
@@ -104,7 +104,7 @@
   </div>
 
   <!-- Transactions Table -->
-  <div class="card shadow-sm" id="tx-history-card">
+  <div class="card shadow-sm">
     <div class="card-header bg-white d-flex justify-content-between align-items-center">
       <h6 class="mb-0">Transaction History</h6>
       <span class="badge bg-secondary" id="transaction-count">0 transactions</span>
