--- a/transactions.html
+++ b/transactions.html
@@ -382,6 +382,6 @@
 <script src="js/app.js"></script>
 <!-- SIRF YEH DO FILES - transactions-page.js BILKUL NAHI -->
 <script src="js/transactions-COMPLETE.js"></script>
-<script src="js/transactions-enhancements-WORKING.js"></script>
+<!-- <script src="js/transactions-enhancements-WORKING.js"></script> -->
 </body>
 </html>
