--- a/mobil.html
+++ b/mobil.html
@@ -282,6 +282,6 @@ View History
 <script src="js/config.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/app.js"></script>
-<script src="js/mobil-management.js"></script>
+<script src="js/mobil-management.js?v=2"></script>
 </body>
 </html>
