--- a/mobil.html
+++ b/mobil.html
@@ -13,40 +13,72 @@
 <div id="navbar-placeholder"></div>
 <div class="container py-4">
 <h3 class="mb-4"><i class="bi bi-droplet-half me-2"></i>Mobil Oil Management</h3>
-<!-- Stock Cards -->
+<!-- Stock Cards - 4 Cards -->
 <div class="row g-3 mb-4">
-<div class="col-md-6">
-<div class="card shadow-sm border-primary">
-<div class="card-body">
-<div class="d-flex justify-content-between align-items-center">
-<div>
-<h6 class="text-muted mb-2">Car Mobil Stock</h6>
-<h2 class="mb-0" id="mobil-car-stock-page">0</h2>
-<small class="text-muted">Liters</small>
-</div>
-<div class="stat-icon" style="background: rgba(13, 110, 253, 0.1); padding: 1rem; border-radius: 10px;">
-<i class="bi bi-droplet-fill text-primary" style="font-size: 2rem;"></i>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="col-md-6">
-<div class="card shadow-sm border-success">
-<div class="card-body">
-<div class="d-flex justify-content-between align-items-center">
-<div>
-<h6 class="text-muted mb-2">Open Mobil Stock</h6>
-<h2 class="mb-0" id="mobil-open-stock-page">0</h2>
-<small class="text-muted">Liters</small>
-</div>
-<div class="stat-icon" style="background: rgba(25, 135, 84, 0.1); padding: 1rem; border-radius: 10px;">
-<i class="bi bi-droplet-fill text-success" style="font-size: 2rem;"></i>
-</div>
-</div>
-</div>
-</div>
-</div>
+  <div class="col-6 col-md-3">
+    <div class="card shadow-sm h-100" style="border-top:4px solid #0d6efd;">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-start">
+          <div>
+            <h6 class="text-muted mb-1" style="font-size:0.78rem;">Car Mobil Stock</h6>
+            <h2 class="mb-0 text-primary fw-bold" id="mobil-car-stock-page">0</h2>
+            <small class="text-muted">Liters Remaining</small>
+          </div>
+          <div style="background:rgba(13,110,253,0.1);padding:0.6rem;border-radius:8px;">
+            <i class="bi bi-droplet-fill text-primary" style="font-size:1.6rem;"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 col-md-3">
+    <div class="card shadow-sm h-100" style="border-top:4px solid #198754;">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-start">
+          <div>
+            <h6 class="text-muted mb-1" style="font-size:0.78rem;">Open Mobil Stock</h6>
+            <h2 class="mb-0 text-success fw-bold" id="mobil-open-stock-page">0</h2>
+            <small class="text-muted">Liters Remaining</small>
+          </div>
+          <div style="background:rgba(25,135,84,0.1);padding:0.6rem;border-radius:8px;">
+            <i class="bi bi-droplet-fill text-success" style="font-size:1.6rem;"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 col-md-3">
+    <div class="card shadow-sm h-100" style="border-top:4px solid #fd7e14;">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-start">
+          <div>
+            <h6 class="text-muted mb-1" style="font-size:0.78rem;">Car Mobil Sales</h6>
+            <h2 class="mb-0 fw-bold" style="color:#fd7e14;" id="mobil-car-sales-page">0</h2>
+            <small class="text-muted">Liters Sold</small>
+          </div>
+          <div style="background:rgba(253,126,20,0.1);padding:0.6rem;border-radius:8px;">
+            <i class="bi bi-cart-check-fill" style="font-size:1.6rem;color:#fd7e14;"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 col-md-3">
+    <div class="card shadow-sm h-100" style="border-top:4px solid #6f42c1;">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-start">
+          <div>
+            <h6 class="text-muted mb-1" style="font-size:0.78rem;">Open Mobil Sales</h6>
+            <h2 class="mb-0 fw-bold" style="color:#6f42c1;" id="mobil-open-sales-page">0</h2>
+            <small class="text-muted">Liters Sold</small>
+          </div>
+          <div style="background:rgba(111,66,193,0.1);padding:0.6rem;border-radius:8px;">
+            <i class="bi bi-cart-check-fill" style="font-size:1.6rem;color:#6f42c1;"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Quick Actions -->
 <div class="row g-3 mb-4">
@@ -282,6 +314,6 @@ View History
 <script src="js/config.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/app.js"></script>
-<script src="js/mobil-management.js?v=2"></script>
+<script src="js/mobil-management.js?v=3"></script>
 </body>
 </html>
