--- a/transactions.html
+++ b/transactions.html
@@ -358,7 +358,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="js/config.js"></script>
 <script src="js/auth.js"></script>
-<script src="js/app.js"></script>
+<!-- app.js NOT loaded on transactions page — transactions-COMPLETE.js handles all -->
 <script src="js/transactions-COMPLETE.js"></script>
 </body>
 </html>
